선택지 있는 팝업창 참고용 구현
프로롤로그 씬에 참고용으로
선택지 있는 팝업창 구현해둠.
버튼 누르면 실행되고 yes나 no 누르면 닫힘 (변수전달은 미구현해둠)

씬 확인하다가 메타파일 수정될수 있으니 해당 씬 수정사항은 그냥 discard 할것

--- a/Workpeice/programming/Socializer/Assembly-CSharp.csproj
+++ b/Workpeice/programming/Socializer/Assembly-CSharp.csproj
@@ -717,6 +717,7 @@
     <Compile Include="Assets\Scripts\NoticeMsg.cs" />
     <Compile Include="Assets\Scripts\NoticeUI.cs" />
     <Compile Include="Assets\Scripts\SceneChange.cs" />
+    <Compile Include="Assets\Scripts\test.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro.cginc" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile Overlay.shader" />
     <None Include="Assets\FungusExamples\TheFacility\Fonts\aleo\SIL Open Font License.txt" />
