게임메뉴 구현
-게임 메뉴 내 설정 버튼, 로비, 종료버튼 구현
-설정은 구현되면 이어붙일 예정
-로비는 씬이동 ( 코드수정 예정)
-종류는 어플리케이션 종료

--- a/Workpeice/programming/Socializer/Assembly-CSharp.csproj
+++ b/Workpeice/programming/Socializer/Assembly-CSharp.csproj
@@ -713,11 +713,11 @@
     <Compile Include="Assets\FungusExamples\FungusLua\Bindings\CustomScript.cs" />
     <Compile Include="Assets\FungusExamples\MonoBehEvents\SpriteColorChangeFromFungusMouseEvent.cs" />
     <Compile Include="Assets\Scripts\AudioManager.cs" />
+    <Compile Include="Assets\Scripts\Menu.cs" />
     <Compile Include="Assets\Scripts\NickName.cs" />
     <Compile Include="Assets\Scripts\NoticeMsg.cs" />
     <Compile Include="Assets\Scripts\NoticeUI.cs" />
     <Compile Include="Assets\Scripts\SceneChange.cs" />
-    <Compile Include="Assets\Scripts\test.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro.cginc" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile Overlay.shader" />
     <None Include="Assets\FungusExamples\TheFacility\Fonts\aleo\SIL Open Font License.txt" />
