--- a/Workpeice/programming/Socializer/Assembly-CSharp.csproj
+++ b/Workpeice/programming/Socializer/Assembly-CSharp.csproj
@@ -716,12 +716,15 @@
     <Compile Include="Assets\Scripts\AudioManager.cs" />
     <Compile Include="Assets\Scripts\Menu.cs" />
     <Compile Include="Assets\Scripts\Music.cs" />
-    <Compile Include="Assets\Scripts\MyScript.cs" />
     <Compile Include="Assets\Scripts\NickName.cs" />
     <Compile Include="Assets\Scripts\NoticeMsg.cs" />
     <Compile Include="Assets\Scripts\NoticeUI.cs" />
+    <Compile Include="Assets\Scripts\OptionInstance.cs" />
+    <Compile Include="Assets\Scripts\OptionPopupSystem.cs" />
+    <Compile Include="Assets\Scripts\PopupInstance.cs" />
     <Compile Include="Assets\Scripts\PopupSystem.cs" />
     <Compile Include="Assets\Scripts\SceneChange.cs" />
+    <Compile Include="Assets\Scripts\VideoOption.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro.cginc" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile Overlay.shader" />
     <None Include="Assets\FungusExamples\TheFacility\Fonts\aleo\SIL Open Font License.txt" />
