--- a/Workpeice/programming/Socializer/Assembly-CSharp.csproj
+++ b/Workpeice/programming/Socializer/Assembly-CSharp.csproj
@@ -713,6 +713,10 @@
     <Compile Include="Assets\FungusExamples\FungusLua\Bindings\CustomScript.cs" />
     <Compile Include="Assets\FungusExamples\MonoBehEvents\SpriteColorChangeFromFungusMouseEvent.cs" />
     <Compile Include="Assets\Scripts\AudioManager.cs" />
+    <Compile Include="Assets\Scripts\HB_Script\MSG_Send.cs" />
+    <Compile Include="Assets\Scripts\HB_Script\Schedule_Button.cs" />
+    <Compile Include="Assets\Scripts\HB_Script\UIBtn2.cs" />
+    <Compile Include="Assets\Scripts\HB_Script\UIbtn.cs" />
     <Compile Include="Assets\Scripts\MenuUI.cs" />
     <Compile Include="Assets\Scripts\MsgReceive.cs" />
     <Compile Include="Assets\Scripts\Music.cs" />
@@ -726,8 +730,6 @@
     <Compile Include="Assets\Scripts\PopupSystem.cs" />
     <Compile Include="Assets\Scripts\SceneChange.cs" />
     <Compile Include="Assets\Scripts\TutorialReset.cs" />
-    <Compile Include="Assets\Scripts\UIBtn2.cs" />
-    <Compile Include="Assets\Scripts\UIbtn.cs" />
     <Compile Include="Assets\Scripts\VideoOption.cs" />
     <Compile Include="Assets\Scripts\flowstop.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro.cginc" />
