bgm 중복 오류 해결
DontDestroyOnLoad, Destroy

https://pais10.tistory.com/18
https://itleader.tistory.com/165
위 두 링크 참고하였음

--- a/Workpeice/programming/Socializer/Assembly-CSharp.csproj
+++ b/Workpeice/programming/Socializer/Assembly-CSharp.csproj
@@ -714,17 +714,21 @@
     <Compile Include="Assets\FungusExamples\FungusLua\Bindings\CustomScript.cs" />
     <Compile Include="Assets\FungusExamples\MonoBehEvents\SpriteColorChangeFromFungusMouseEvent.cs" />
     <Compile Include="Assets\Scripts\AudioManager.cs" />
-    <Compile Include="Assets\Scripts\Menu.cs" />
+    <Compile Include="Assets\Scripts\MenuUI.cs" />
+    <Compile Include="Assets\Scripts\MsgReceive.cs" />
     <Compile Include="Assets\Scripts\Music.cs" />
     <Compile Include="Assets\Scripts\NickName.cs" />
     <Compile Include="Assets\Scripts\NoticeMsg.cs" />
-    <Compile Include="Assets\Scripts\NoticeUI.cs" />
     <Compile Include="Assets\Scripts\OptionInstance.cs" />
     <Compile Include="Assets\Scripts\OptionPopupSystem.cs" />
+    <Compile Include="Assets\Scripts\PauseMenu.cs" />
+    <Compile Include="Assets\Scripts\PopUpDebug.cs" />
     <Compile Include="Assets\Scripts\PopupInstance.cs" />
     <Compile Include="Assets\Scripts\PopupSystem.cs" />
     <Compile Include="Assets\Scripts\SceneChange.cs" />
+    <Compile Include="Assets\Scripts\TutorialReset.cs" />
     <Compile Include="Assets\Scripts\VideoOption.cs" />
+    <Compile Include="Assets\Scripts\flowstop.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro.cginc" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile Overlay.shader" />
     <None Include="Assets\FungusExamples\TheFacility\Fonts\aleo\SIL Open Font License.txt" />
@@ -1311,85 +1315,85 @@
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.5f1/Editor/Data/MonoBleedingEdge/lib/mono/unityscript/Boo.Lang.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline.Editor">
-      <HintPath>D:/문서/GitHub/Socializer/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+      <HintPath>C:/Users/qnwk9/OneDrive/문서/GitHub/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Animation.Runtime">
-      <HintPath>D:/문서/GitHub/Socializer/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.2D.Animation.Runtime.dll</HintPath>
+      <HintPath>C:/Users/qnwk9/OneDrive/문서/GitHub/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.2D.Animation.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.PixelPerfect.Editor">
-      <HintPath>D:/문서/GitHub/Socializer/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.2D.PixelPerfect.Editor.dll</HintPath>
+      <HintPath>C:/Users/qnwk9/OneDrive/문서/GitHub/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.2D.PixelPerfect.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VSCode.Editor">
-      <HintPath>D:/문서/GitHub/Socializer/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
+      <HintPath>C:/Users/qnwk9/OneDrive/문서/GitHub/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.SpriteShape.Editor">
-      <HintPath>D:/문서/GitHub/Socializer/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.2D.SpriteShape.Editor.dll</HintPath>
+      <HintPath>C:/Users/qnwk9/OneDrive/문서/GitHub/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.2D.SpriteShape.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>D:/문서/GitHub/Socializer/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>C:/Users/qnwk9/OneDrive/문서/GitHub/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Path.Editor">
-      <HintPath>D:/문서/GitHub/Socializer/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.2D.Path.Editor.dll</HintPath>
+      <HintPath>C:/Users/qnwk9/OneDrive/문서/GitHub/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.2D.Path.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>D:/문서/GitHub/Socializer/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
+      <HintPath>C:/Users/qnwk9/OneDrive/문서/GitHub/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline">
-      <HintPath>D:/문서/GitHub/Socializer/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+      <HintPath>C:/Users/qnwk9/OneDrive/문서/GitHub/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Animation.Triangle.Runtime">
-      <HintPath>D:/문서/GitHub/Socializer/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.2D.Animation.Triangle.Runtime.dll</HintPath>
+      <HintPath>C:/Users/qnwk9/OneDrive/문서/GitHub/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.2D.Animation.Triangle.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="PsdPlugin">
-      <HintPath>D:/문서/GitHub/Socializer/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/PsdPlugin.dll</HintPath>
+      <HintPath>C:/Users/qnwk9/OneDrive/문서/GitHub/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/PsdPlugin.dll</HintPath>
     </Reference>
     <Reference Include="Unity.CollabProxy.Editor">
-      <HintPath>D:/문서/GitHub/Socializer/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+      <HintPath>C:/Users/qnwk9/OneDrive/문서/GitHub/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Rider.Editor">
-      <HintPath>D:/문서/GitHub/Socializer/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
+      <HintPath>C:/Users/qnwk9/OneDrive/문서/GitHub/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Mathematics">
-      <HintPath>D:/문서/GitHub/Socializer/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.Mathematics.dll</HintPath>
+      <HintPath>C:/Users/qnwk9/OneDrive/문서/GitHub/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.Mathematics.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Psdimporter.Editor">
-      <HintPath>D:/문서/GitHub/Socializer/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.2D.Psdimporter.Editor.dll</HintPath>
+      <HintPath>C:/Users/qnwk9/OneDrive/문서/GitHub/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.2D.Psdimporter.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.InternalAPIEngineBridge.001">
-      <HintPath>D:/문서/GitHub/Socializer/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.InternalAPIEngineBridge.001.dll</HintPath>
+      <HintPath>C:/Users/qnwk9/OneDrive/문서/GitHub/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.InternalAPIEngineBridge.001.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Sprite.Editor">
-      <HintPath>D:/문서/GitHub/Socializer/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.2D.Sprite.Editor.dll</HintPath>
+      <HintPath>C:/Users/qnwk9/OneDrive/문서/GitHub/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.2D.Sprite.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Common.Runtime">
-      <HintPath>D:/문서/GitHub/Socializer/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.2D.Common.Runtime.dll</HintPath>
+      <HintPath>C:/Users/qnwk9/OneDrive/문서/GitHub/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.2D.Common.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Tilemap.Editor">
-      <HintPath>D:/문서/GitHub/Socializer/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.2D.Tilemap.Editor.dll</HintPath>
+      <HintPath>C:/Users/qnwk9/OneDrive/문서/GitHub/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.2D.Tilemap.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.SpriteShape.Runtime">
-      <HintPath>D:/문서/GitHub/Socializer/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.2D.SpriteShape.Runtime.dll</HintPath>
+      <HintPath>C:/Users/qnwk9/OneDrive/문서/GitHub/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.2D.SpriteShape.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.PixelPerfect">
-      <HintPath>D:/문서/GitHub/Socializer/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.2D.PixelPerfect.dll</HintPath>
+      <HintPath>C:/Users/qnwk9/OneDrive/문서/GitHub/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.2D.PixelPerfect.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Animation.Editor">
-      <HintPath>D:/문서/GitHub/Socializer/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.2D.Animation.Editor.dll</HintPath>
+      <HintPath>C:/Users/qnwk9/OneDrive/문서/GitHub/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.2D.Animation.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Mathematics.Editor">
-      <HintPath>D:/문서/GitHub/Socializer/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.Mathematics.Editor.dll</HintPath>
+      <HintPath>C:/Users/qnwk9/OneDrive/문서/GitHub/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.Mathematics.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>D:/문서/GitHub/Socializer/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+      <HintPath>C:/Users/qnwk9/OneDrive/문서/GitHub/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Common.Editor">
-      <HintPath>D:/문서/GitHub/Socializer/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.2D.Common.Editor.dll</HintPath>
+      <HintPath>C:/Users/qnwk9/OneDrive/문서/GitHub/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.2D.Common.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.InternalAPIEditorBridge.001">
-      <HintPath>D:/문서/GitHub/Socializer/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.InternalAPIEditorBridge.001.dll</HintPath>
+      <HintPath>C:/Users/qnwk9/OneDrive/문서/GitHub/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/Unity.InternalAPIEditorBridge.001.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.UI">
-      <HintPath>D:/문서/GitHub/Socializer/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
+      <HintPath>C:/Users/qnwk9/OneDrive/문서/GitHub/SocializerRepo/Workpeice/programming/Socializer/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup></ItemGroup>
