볼륨 에러 수정
- bgm 중복 문제를 작일 새벽 해결했으나 볼륨 슬라이더가 먹통이 되는 문제가 생김 (DontDestroyOnLoad와 Destroy 하면서 다른 캔버스에 있는 슬라이더 오브젝트의 연결이 끊김)
- 이를 OpenSlider 스크립트를 생성하여 OptionPopupSystem 스크립트에 static bool 변수를 이용하여 해결함
- 다른 scene 이동 후 다시 돌아와도 bgm 중복, 슬라이더 에러 없음

* 현재 master volume slider만 구현된 상태
- 추후 scene이 늘어나도 bgm 및 효과음 사용이 늘어나면 나머지 슬라이더도 구현할 예정
* OptionCanvas 프리팹이 수정되었습니다. (Sliders 삭제, Sliders: AudioManager의 자식 오브젝트로 변경, DontDestroyOnLoad로 사용됨)
* 익일, 비디오 해상도 문제도 해결해서 올릴 예정 (프리팹 변경)

--- a/Workpeice/programming/Socializer/Assembly-CSharp.csproj
+++ b/Workpeice/programming/Socializer/Assembly-CSharp.csproj
@@ -719,6 +719,7 @@
     <Compile Include="Assets\Scripts\Music.cs" />
     <Compile Include="Assets\Scripts\NickName.cs" />
     <Compile Include="Assets\Scripts\NoticeMsg.cs" />
+    <Compile Include="Assets\Scripts\OpenSliders.cs" />
     <Compile Include="Assets\Scripts\OptionInstance.cs" />
     <Compile Include="Assets\Scripts\OptionPopupSystem.cs" />
     <Compile Include="Assets\Scripts\PauseMenu.cs" />
