텍스트이벤트 임시 저장
임시저장

--- a/Workpeice/programming/Socializer/Assembly-CSharp.csproj
+++ b/Workpeice/programming/Socializer/Assembly-CSharp.csproj
@@ -713,8 +713,10 @@
     <Compile Include="Assets\FungusExamples\FungusLua\Bindings\CustomScript.cs" />
     <Compile Include="Assets\FungusExamples\MonoBehEvents\SpriteColorChangeFromFungusMouseEvent.cs" />
     <Compile Include="Assets\Scripts\AudioManager.cs" />
+    <Compile Include="Assets\Scripts\HB_Script\Example.cs" />
     <Compile Include="Assets\Scripts\HB_Script\MSG_Send.cs" />
     <Compile Include="Assets\Scripts\HB_Script\Schedule_Button.cs" />
+    <Compile Include="Assets\Scripts\HB_Script\Text_Event.cs" />
     <Compile Include="Assets\Scripts\HB_Script\UIBtn2.cs" />
     <Compile Include="Assets\Scripts\HB_Script\UIbtn.cs" />
     <Compile Include="Assets\Scripts\MenuUI.cs" />
