--- a/Workpeice/programming/Socializer/Assembly-CSharp.csproj
+++ b/Workpeice/programming/Socializer/Assembly-CSharp.csproj
@@ -716,6 +716,7 @@
     <Compile Include="Assets\Scripts\HB_Script\Example.cs" />
     <Compile Include="Assets\Scripts\HB_Script\MSG_Send.cs" />
     <Compile Include="Assets\Scripts\HB_Script\Schedule_Button.cs" />
+    <Compile Include="Assets\Scripts\HB_Script\Text_Clickable.cs" />
     <Compile Include="Assets\Scripts\HB_Script\Text_Event.cs" />
     <Compile Include="Assets\Scripts\HB_Script\UIBtn2.cs" />
     <Compile Include="Assets\Scripts\HB_Script\UIbtn.cs" />
@@ -761,6 +762,7 @@
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF.shader" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro_Properties.cginc" />
+    <None Include="Assets\Fonts\HB_Font\상용한글2350자.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro_Surface.cginc" />
     <None Include="Assets\Prefabs\README.txt" />
     <None Include="Assets\Fungus\Fonts\Amaranth\SIL Open Font License.txt" />
