--- a/Workpeice/programming/Socializer/Assembly-CSharp.csproj
+++ b/Workpeice/programming/Socializer/Assembly-CSharp.csproj
@@ -713,22 +713,22 @@
     <Compile Include="Assets\FungusExamples\FirstPerson\Scripts\SimpleMouseLook.cs" />
     <Compile Include="Assets\FungusExamples\FungusLua\Bindings\CustomScript.cs" />
     <Compile Include="Assets\FungusExamples\MonoBehEvents\SpriteColorChangeFromFungusMouseEvent.cs" />
-    <Compile Include="Assets\Scripts\AudioManager.cs" />
     <Compile Include="Assets\Scripts\MenuUI.cs" />
     <Compile Include="Assets\Scripts\MsgReceive.cs" />
-    <Compile Include="Assets\Scripts\Music.cs" />
     <Compile Include="Assets\Scripts\NickName.cs" />
     <Compile Include="Assets\Scripts\NoticeMsg.cs" />
-    <Compile Include="Assets\Scripts\OpenSliders.cs" />
-    <Compile Include="Assets\Scripts\OptionInstance.cs" />
-    <Compile Include="Assets\Scripts\OptionPopupSystem.cs" />
     <Compile Include="Assets\Scripts\PauseMenu.cs" />
     <Compile Include="Assets\Scripts\PopUpDebug.cs" />
-    <Compile Include="Assets\Scripts\PopupInstance.cs" />
-    <Compile Include="Assets\Scripts\PopupSystem.cs" />
     <Compile Include="Assets\Scripts\SceneChange.cs" />
     <Compile Include="Assets\Scripts\TutorialReset.cs" />
-    <Compile Include="Assets\Scripts\VideoOption.cs" />
+    <Compile Include="Assets\Scripts\boo\AudioManager.cs" />
+    <Compile Include="Assets\Scripts\boo\Music.cs" />
+    <Compile Include="Assets\Scripts\boo\OpenSliders.cs" />
+    <Compile Include="Assets\Scripts\boo\OptionInstance.cs" />
+    <Compile Include="Assets\Scripts\boo\OptionPopupSystem.cs" />
+    <Compile Include="Assets\Scripts\boo\PopupInstance.cs" />
+    <Compile Include="Assets\Scripts\boo\PopupSystem.cs" />
+    <Compile Include="Assets\Scripts\boo\VideoOption.cs" />
     <Compile Include="Assets\Scripts\flowstop.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro.cginc" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile Overlay.shader" />
