--- a/Workpeice/programming/Socializer/Assembly-CSharp.csproj
+++ b/Workpeice/programming/Socializer/Assembly-CSharp.csproj
@@ -725,11 +725,14 @@
     <Compile Include="Assets\Scripts\PopUpDebug.cs" />
     <Compile Include="Assets\Scripts\SceneChange.cs" />
     <Compile Include="Assets\Scripts\TutorialReset.cs" />
+    <Compile Include="Assets\Scripts\boo\AudioManager.cs" />
     <Compile Include="Assets\Scripts\boo\Music.cs" />
     <Compile Include="Assets\Scripts\boo\OpenSliders.cs" />
     <Compile Include="Assets\Scripts\boo\OptionInstance.cs" />
+    <Compile Include="Assets\Scripts\boo\OptionPopupSystem.cs" />
     <Compile Include="Assets\Scripts\boo\PopupInstance.cs" />
     <Compile Include="Assets\Scripts\boo\PopupSystem.cs" />
+    <Compile Include="Assets\Scripts\boo\VideoOption.cs" />
     <Compile Include="Assets\Scripts\flowstop.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro.cginc" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile Overlay.shader" />
