--- a/Workpeice/programming/Socializer/Assembly-CSharp.csproj
+++ b/Workpeice/programming/Socializer/Assembly-CSharp.csproj
@@ -728,6 +728,7 @@
     <Compile Include="Assets\Scripts\boo\OptionPopupSystem.cs" />
     <Compile Include="Assets\Scripts\boo\PopupInstance.cs" />
     <Compile Include="Assets\Scripts\boo\PopupSystem.cs" />
+    <Compile Include="Assets\Scripts\boo\VarManager.cs" />
     <Compile Include="Assets\Scripts\boo\VideoOption.cs" />
     <Compile Include="Assets\Scripts\flowstop.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro.cginc" />
