버튼 클릭 효과음 적용 및 변수 fungus 적용
1. 버튼 클릭할 때 효과음 적용함
 - 임시로 버튼음_1_3을 사용했습니다. 버튼음_2_3을 적용할 부분 추후 피드백 이후 수정 예정
 - MasterVolume 사용 시 다른 slider의 효력이 묻히는 문제 발생한 것 같음

2. 변수 script에 fungus를 이용해 변수 적용해봄
 - 아직 연습용으로 적용한 것입니다. 추후 수정될 예정

--- a/Workpeice/programming/Socializer/Assembly-CSharp.csproj
+++ b/Workpeice/programming/Socializer/Assembly-CSharp.csproj
@@ -737,7 +737,8 @@
     <Compile Include="Assets\Scripts\Lesin\TutorialReset.cs" />
     <Compile Include="Assets\Scripts\Lesin\flowstop.cs" />
     <Compile Include="Assets\Scripts\boo\AudioManager.cs" />
-    <Compile Include="Assets\Scripts\boo\Music.cs" />
+    <Compile Include="Assets\Scripts\boo\DontDestroyScript.cs" />
+    <Compile Include="Assets\Scripts\boo\MasterVolumeManager.cs" />
     <Compile Include="Assets\Scripts\boo\OpenSliders.cs" />
     <Compile Include="Assets\Scripts\boo\OptionInstance.cs" />
     <Compile Include="Assets\Scripts\boo\OptionPopupSystem.cs" />
